# graph-rag-indexer

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/embeddings/: langchain_generator.py
src/parsing/: js.py  models.py  queries.py
src/store/: milvus.py  neo4j.py
