[project]
name = "grag-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.21",
    "langchain-google-genai>=2.1.2",
    "langchain-milvus>=0.1.8",
    "langchain-openai>=0.3.11",
    "neo4j>=5.28.1",
    "pydantic>=2.11.1",
    "pymilvus>=2.5.6",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.0.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-javascript>=0.23.1",
]
